# KVS

./: README.md
docs/: README_kvs_server.md
kvs_open-source/: CMakeLists.txt  README.md
kvs_open-source/include/: kvs_producer_sdk.h  kvs_producer_sdk_minimal.h
kvs_open-source/minimal_sdk/: kvs_producer_minimal.c  kvs_producer_minimal.h
kvs_open-source/samples/: CMakeLists.txt  kvs_event_uploader.c
kvs_open-source/samples/kvs_server/: CMakeLists.txt  kvs_main.c  kvs_service.c  kvs_service.h
kvs_open-source/src/: kvs_producer_sdk_minimal.c  producer_core.c
kvs_open-source/src/client/: default_client.c
kvs_open-source/src/internal/: kvs_producer_internal.h
kvs_open-source/src/net/: default_network.c
kvs_open-source/src/serialization/: default_serializer.c
kvs_open-source/src/utils/: time_utils.c
kvs_server/: CMakeLists.txt  kvs_main.c  kvs_media.c  kvs_media.h  kvs_msg.c  kvs_msg.h  kvs_service.c  kvs_service.h  kvs_service_cfg.c
